syntax = "proto3";
option go_package = "github.com/demimurg/twitter/pkg/proto";
import "google/protobuf/timestamp.proto";

service Twitter {
    rpc AddTweet(AddTweetRequest) returns (AddTweetResponse);
    rpc GetNewsFeed(GetNewsFeedRequest) returns (GetNewsFeedResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Follow(FollowRequest) returns (FollowResponse);
    rpc Unfollow(UnfollowRequest) returns (UnfollowResponse);
    rpc RecommendUsers(RecommendUsersRequest) returns (RecommendUsersResponse);
}

message AddTweetRequest {
    string text = 1;
    // TODO: remove after auth with jwt will be implemented
    int64 user_id = 10;
};

message AddTweetResponse {};

message GetNewsFeedRequest {
    int64 limit = 1;
    int64 offset = 2;
    // TODO: remove after auth with jwt will be implemented
    int64 user_id = 10;
};

message GetNewsFeedResponse {
    repeated string tweets = 1;
};

message RegisterRequest {
    UserProfile user = 1;
};

message UserProfile {
    string email = 1;
    string full_name = 2;
    string caption = 3;
    google.protobuf.Timestamp date_of_birth = 4;
};

message RegisterResponse {
    int64 user_id = 1;
};

message FollowRequest {
    int64 user_id = 1;
    int64 new_follower_id = 2;
};

message FollowResponse {};

message UnfollowRequest {
    int64 user_id = 1;
    int64 old_follower_id = 2;
};

message UnfollowResponse {};

message LoginRequest {
    string email = 1;
};

message LoginResponse {
    int64 user_id = 1;
    UserProfile user_profile = 2;
};

message RecommendUsersRequest {
    int64 user_id = 1;
};

message RecommendUsersResponse {
    repeated UserProfile users = 1;
};